--- a/stylesheets/application.scss
+++ b/stylesheets/application.scss
@@ -33,6 +33,7 @@ a {
   @include size(100vw 100vh);
   @include pad(default);
   @include position(absolute, 0px 0 0 0px);
+  background-color: white;
   display: none;
 
   &.is-current {
@@ -54,6 +55,7 @@ a {
 .timer-toggle {
   $size: 6em;
   $margin:  -($size / 2);
+  @include transition(box-shadow 0.1s ease-in-out);
   @include circle($size);
   @include position(absolute, 33% 0 0 50%);
   background-color: $colorPomodoro;
@@ -64,6 +66,10 @@ a {
   margin: $margin 0 0 $margin;
   text-align: center;
 
+  &:hover {
+    box-shadow: 0 0 0 10px rgba(black, 0.2);
+  }
+
   .on-pomodoro & {
     color: $colorPomodoro;
     background-color: white;
@@ -73,11 +79,16 @@ a {
 .pomodoros-toggle {
   $size: 3em;
   $margin: -($size / 2);
+  @include transition(box-shadow 0.1s ease-in-out);
   @include circle($size);
   @include position(absolute, 0 0 15% 50%);
   margin: $margin 0 0 $margin;
   background-color: $colorPomodoro;
   display: block;
+
+  &:hover {
+    box-shadow: 0 0 0 5px rgba(black, 0.2);
+  }
 
   .on-pomodoro & {
     background-color: white;
